# brazen

./: Cargo.toml  README.md  build.rs  justfile  test.html  test_output.txt
config/: brazen.toml
docs/: roadmap.md
docs/automation/: api.md  schema.json
docs/roadmaps/: automation-and-external-apis.md  cache-and-asset-plane.md  cache-capture-and-query.md  capability-permissions.md  coverage.toml  extraction-pipeline.md  interaction-and-input.md  knowledge-plane.md  local-connectors.md  media-reading-and-tts.md  navigation-and-session-model.md  observability-and-quality.md  persistence-and-profiles.md  resource-injection.md  security-policy-and-audit.md  servo-engine-integration.md  servo-live-integration.md  servo-real-rendering-implementation.md  servo-real-rendering.md  servo-rendering-debug.md  shell-and-workspace.md
docs/servo/: architecture.md  build-steps.md  embedding-entrypoints.md  prereqs.md  rendering.md
examples/automation/bash/: take_screenshot.sh
examples/automation/python/: brazen_client.py
scratch/: extract_groups.py
scripts/: gen_roadmap_coverage.py
src/: app.rs  app.rs.orig  app.rs.rej  automation.rs  automation.rs.bak  cache.rs  cli_cache.rs  cli_introspect.rs  commands.rs  config.rs  engine.rs  extraction.rs  lib.rs  logging.rs  main.rs  mounts.rs  navigation.rs  permissions.rs  profile_db.rs  rendering.rs  servo_embedder.rs  servo_resources.rs  servo_runtime.rs  servo_upstream.rs  session.rs  terminal.rs  tls.rs  ui_theme.rs  virtual_protocol.rs  virtual_router.rs
src/app/: capture.rs  input.rs  mod.rs  navigation.rs  panels.rs  recovery.rs  secondary_ui.rs  state.rs  ui_components.rs  ui_main.rs  workspace.rs  zoom.rs
src/automation/: handle.rs  handlers.rs  mod.rs  server.rs  types.rs
tests/: bootstrap.rs  cli_cache.rs  e2e_automation.rs  permission_grants_persist.rs  roadmap_coverage.rs  servo_rendering_about_blank.rs  servo_rendering_data_url.rs  servo_runtime.rs  servo_upstream_rendering.rs  test_observability.rs
