[package]
name = "brazen"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
servo = []

[dependencies]
directories = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.6"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.8"

[dev-dependencies]
tempfile = "3.27.0"
