[package]
name = "brazen"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
servo = ["servo-upstream"]
servo-upstream = [
  "dep:dpi",
  "dep:libservo",
  "dep:tracing-log",
]

[dependencies]
directories = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.33.3"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0-rc.5"
thiserror = "2.0.18"
toml = "1.0.6"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
dpi = { version = "0.1.2", optional = true }
libservo = { path = "vendor/servo/components/servo", optional = true, package = "libservo" }
tracing-log = { version = "0.2.0", optional = true }
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.servo]
inherits = "release"
opt-level = 2
debug = true

[patch.crates-io]
glslopt = { path = "vendor/glslopt" }
