[package]
name = "brazen"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
servo = ["servo-upstream"]
servo-upstream = [
  "dep:dpi",
  "dep:libservo",
  "dep:tracing-log",
]

[dependencies]
directories = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.33.3"
axum = { version = "0.8.8", features = ["ws"] }
http = "1.1"
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
futures-util = "0.3.32"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0-rc.5"
globset = "0.4.15"
thiserror = "2.0.18"
toml = "1.0.6"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "process"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
dpi = { version = "0.1.2", optional = true }
libservo = { path = "vendor/servo/components/servo", optional = true, package = "libservo" }
tracing-log = { version = "0.2.0", optional = true }
rustls = { version = "0.23.37", features = ["ring"] }
ureq = "2.12.1"
webpki-roots = "1.0.6"

[dev-dependencies]
tempfile = "3.27.0"
tiny_http = "0.12.0"

[profile.servo]
inherits = "release"
opt-level = 2
debug = true

[patch.crates-io]
glslopt = { path = "vendor/glslopt" }
